--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## description",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config build/webpack.prod.conf.js --mode production"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/SparkLv/blog#readme",
   "dependencies": {
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11",
     "webpack-merge": "^4.1.2"
   }
 }
