--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## description",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config build/webpack.prod.conf.js --mode production"
+    "build": "webpack --config build/webpack.prod.conf.js --mode production",
+    "dev": "webpack-dev-server --open --config build/webpack.dev.conf.js --mode development"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,16 @@
   },
   "homepage": "https://github.com/SparkLv/blog#readme",
   "dependencies": {
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.10",
+    "html-webpack-plugin": "^3.0.6",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.1.1",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11",
+    "webpack-dev-server": "^3.1.1",
     "webpack-merge": "^4.1.2"
   }
 }
