--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "## description",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config build/webpack.prod.conf.js --mode production",
-    "dev": "webpack-dev-server --open --config build/webpack.dev.conf.js --mode development"
+    "build": "webpack --config build/webpack.prod.conf.js",
+    "dev": "webpack-dev-server --open --config build/webpack.dev.conf.js"
   },
   "repository": {
     "type": "git",
@@ -25,9 +25,8 @@
     "postcss-loader": "^2.1.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.11",
-    "webpack-dev-server": "^3.1.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1",
     "webpack-merge": "^4.1.2"
   }
 }
