--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config build/webpack.prod.conf.js",
-    "dev": "webpack-dev-server --open --config build/webpack.dev.conf.js"
+    "start": "webpack-dev-server --open --config build/webpack.dev.conf.js"
   },
   "repository": {
     "type": "git",
