--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.10",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^3.0.6",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.1",
