--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "nuxt"
   },
   "dependencies": {
+    "marked": "^0.4.0",
     "node-sass": "^4.9.0",
     "nuxt": "^1.4.1",
     "sass-loader": "^7.0.3"
