--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.4.2",
     "highlightjs": "^9.10.0",
     "marked": "^0.4.0",
     "node-sass": "^4.9.0",
     "nuxt": "^1.4.1",
-    "sass-loader": "^7.0.3"
+    "pug": "^2.0.3",
+    "pug-cli": "^1.0.0-alpha6",
+    "sass-loader": "^7.0.3",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   }
 }
