--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "build": "nuxt build",
     "start": "nuxt start"
   },
+  "nuxt": {
+    "host": "127.0.0.1",
+    "port": "2400"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.2",
