--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nuxt": "^1.4.1",
     "pug": "^2.0.3",
     "pug-cli": "^1.0.0-alpha6",
+    "qiniu": "^7.2.1",
     "sass-loader": "^7.0.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2"
