--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     }
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.2",
